6 October 2008: Wouter
	- jostle-timeout option, so you can config for slow links.

2 October 2008: Wouter
	- fixup unlink of pidfile.
	- fixup SHA256 algorithm collation code.
	- contrib/update-anchor.sh does not overwrite anchors if not needed.
	  exits 0 when a restart is needed, other values if not.
	  so,  update-anchor.sh -d mydir && /etc/rc.d/unbound restart
	  can restart unbound exactly when needed.

30 September 2008: Wouter
	- fixup SHA256 DS downgrade, no longer possible to downgrade to SHA1.
	- tests for sha256 support and downgrade resistance.
	- RSASHA256 and RSASHA512 support (using the draft in dnsext),
	  using the drafted protocol numbers.
	- when using stub on localhost (127.0.0.1@10053) unbound works.
	  Like when running NSD to host a local zone, on the same machine.
	  The noprime feature. manpages more explanation. Added a test for it.
	- shorthand for reverse PTR,  local-data-ptr: "1.2.3.4 www.ex.com"

29 September 2008: Wouter
	- EDNS lameness detection, if EDNS packets are dropped this is
	  detected, eventually.
	- multiple query timeout rtt backoff does not backoff too much.

26 September 2008: Wouter
	- tests for remote-control.
	- small memory leak in exception during remote control fixed.
	- fixup for lock checking but not unchecking in remote control.
	- iana portlist updated.

23 September 2008: Wouter
	- Msg cache is loaded. A cache load enables cache responses.
	- unbound-control flush [name], flush_type and flush_zone.

22 September 2008: Wouter
	- dump_cache and load_cache statements in unbound-control.
	  RRsets are dumped and loaded correctly.
	  Msg cache is dumped.

19 September 2008: Wouter
	- locking on the localdata structure.
	- add and remove local zone and data with unbound-control.
	- ldns trunk snapshot updated, make tests work again.

18 September 2008: Wouter
	- fixup error in time calculation.
	- munin plugin improvements.
	- nicer abbreviations for high query types values (ixfr, axfr, any...)